fix: word wrapping on small screens and add a typescale for fonts

--- a/components/article/article.module.css
+++ b/components/article/article.module.css
@@ -24,4 +24,5 @@
 .article a {
   color: inherit;
   text-decoration: none;
+  font-size: var(--fs-300);
 }
