--- a/components/comments-list/comments-list.module.css
+++ b/components/comments-list/comments-list.module.css
@@ -1,6 +1,7 @@
 .list {
   list-style: none;
   margin: 2em 0;
+  padding: 1em;
 }
 
 .list > li + li {
