--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -43,3 +43,13 @@
 .nav a + a {
   margin-left: 1em;
 }
+
+@media (max-width: 40rem) {
+  .nav {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: var(--fs-300);
+  }
+}
