--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,17 @@
 
 :root {
   --r-blue: #61dafb;
+
+  --scale: 1.25;
+  --base-font-size: 1rem;
+
+  --fs-100: calc(var(var(--fs-200)) / var(--scale));
+  --fs-200: calc(var(--base-font-size) / var(--scale));
+  --fs-300: var(--base-font-size);
+  --fs-400: calc(var(--fs-300) * var(--scale));
+  --fs-500: calc(var(--fs-400) * var(--scale));
+  --fs-600: calc(var(--fs-500) * var(--scale));
+  --fs-700: calc(var(--fs-600) * var(--scale));
 }
 
 body,
@@ -38,7 +49,7 @@ body {
   line-height: 1.5;
   font-family: "Roboto", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  font-size: 1.125rem;
+  font-size: var(--fs-200);
 }
 
 a:not([class]) {
@@ -69,5 +80,11 @@ select {
     animation-iteration-count: 1 !important;
     transition-duration: 0.01ms !important;
     scroll-behavior: auto !important;
+  }
+}
+
+@media (min-width: 40rem) {
+  :root {
+    --base-font-size: 1.25rem;
   }
 }
